--- a/style.css
+++ b/style.css
@@ -19,10 +19,6 @@ h1 {
     margin-bottom: -10px;
 }
 
-.header img {
-	width: 100px;
-}
-
 small {
     font-size: 12px;
     font-weight: bold;
@@ -103,8 +99,8 @@ li.active {
     background-color: #434088;
 }
 
-#pathfinder_header {
-    width: 160px;
+#Pathfinder_Header {
+    width: 96%;
 }
 
 #level span {
