--- a/style.css
+++ b/style.css
@@ -6,9 +6,8 @@ body {
 
 .container {
 	width: 360px;
-	position: absolute;
-	top: 40%;
-	left: 40%;
+	margin-right: auto; 
+	margin-left: auto; 
 }
 
 h1, h2, h3, h4, h5, h6 {
