--- a/style.css
+++ b/style.css
@@ -97,8 +97,8 @@ li.active {
     background-color: #434088;
 }
 
-#pathfinder_header {
-    width: 160px;
+#Pathfinder_Header {
+    width: 100px;
 }
 
 #level span {
