--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 body {
     background-image: url(http://i669.photobucket.com/albums/vv59/asecord/bg-grid.jpg);
     font-family: 'Open Sans', sans-serif;
@@ -98,7 +96,7 @@ li.active {
 }
 
 #Pathfinder_Header {
-    width: 100px;
+    width: 96%;
 }
 
 #level span {
