--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;
     position: relative;
-    left: auto;
-    right: auto;
+    margin: auto;
     width: 360px;
 }
 
