--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(http://i669.photobucket.com/albums/vv59/asecord/bg-grid.jpg);
+    background-image: url(images//bg-grid.jpg);
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;
 }
